Fix unread message timestamp in dark mode
In normal mode, timestamp of unread message has different color from a
read one. But in dark mode they have the same color.

This commit change a color of unread message timestamp to be similar to
the one in normal mode but a little darker.

--- a/browser.css
+++ b/browser.css
@@ -240,6 +240,11 @@ html.darkMode ._1ht7 {
 	color: rgba(255, 255, 255, 0.2);
 }
 
+/* contact list: timestamp (unread) */
+html.darkMode ._1ht3 ._1ht7 {
+  color: rgba(0, 132, 255, .7)
+}
+
 /* contact list: search results */
 html.darkMode ._5t4c,
 html.darkMode ._5t4c ._5l37 {
